# ============================================================================
# UI Module
# Main application user interface components
# ============================================================================

add_subdirectory(AppSettings)
add_subdirectory(FirstRunPromptDialogs)
add_subdirectory(toolbar)

#新增相关的QML文件
add_subdirectory(CustomXbee)
